--- a/Turkish/main/BugReport.apk/res/values-tr/strings.xml
+++ b/Turkish/main/BugReport.apk/res/values-tr/strings.xml
@@ -56,6 +56,7 @@
   <string name="feedback_choose_module">Öğeyi Seç</string>
   <string name="feedback_choose_module_hint">İstenen:</string>
   <string name="feedback_collect_log_failed">"Günlük alınamadı"</string>
+  <string name="feedback_contact_info_hint">Telefon Numarası/E-Posta</string>
   <string name="feedback_continue">Geribildirimle devam et</string>
   <string name="feedback_description">Açıklama</string>
   <string name="feedback_description_bugreport_hint">Bazı işaretler (...) telefonumun bozulmasına neden oldu (...).</string>
@@ -75,6 +76,7 @@
   <string name="feedback_report_remind_login_desc2">"Raporunuz durumunu \"Raporlarım\" altından takip edebilirsiniz."</string>
   <string name="feedback_retest_label">İşlemin Adımları</string>
   <string name="feedback_select_images">Resim Ekle</string>
+  <string name="feedback_select_modem_log">Modem günlüğü ekle</string>
   <string name="feedback_select_problem">Problemler</string>
   <string name="feedback_select_suggestion">Öneriler</string>
   <string name="feedback_select_upload_log">Günlük Ekle</string>
@@ -186,6 +188,11 @@
   <string name="michat_wait_for_a_moment">Biraz bekleyin, yardım geliyor!</string>
   <string name="michat_webview_title">Detayları görüntüle</string>
   <string name="min_error">%1$s daha uzun olmalı.</string>
+  <string name="mobile_data_note_dialog_cancel">WLAN için bekle</string>
+  <string name="mobile_data_note_dialog_confirm">Gönder</string>
+  <string name="mobile_data_note_dialog_content">Mobil veri kullanırken günlükleri göndermek ek ücretlere sebep olabilir.</string>
+  <string name="mobile_data_note_dialog_content_with_file_size">Mobil veri bağlantısıyla günlükleri gönderirken %sMB veri kullanacak.</string>
+  <string name="mobile_data_note_dialog_title">Veri Kullanım Uyarısı</string>
   <string name="modem_tool_log">Modem günlüğünü yakala</string>
   <string name="modem_tool_log_start">Başlat</string>
   <string name="modem_tool_log_start_toast">"%s için modem günlüğünün dökümü kaydediliyor"</string>
@@ -196,6 +203,7 @@
   <string name="module_data">Depolama &amp; Klonlu Uygulamalar</string>
   <string name="module_desktop">Ana Ekrann &amp; Ayarlar</string>
   <string name="module_finance">Finans &amp; Mi Cüzdan</string>
+  <string name="module_google_apps">Google Uygulamaları</string>
   <string name="module_item_less">Gizle</string>
   <string name="module_item_more">Fazlası</string>
   <string name="module_medias">Medya</string>
@@ -206,6 +214,7 @@
   <string name="module_system">Sistem</string>
   <string name="module_tools">Sistem Araçları</string>
   <string name="modules">Öğe seç</string>
+  <string name="multi_graph_more">Toplam Öğe: %d</string>
   <string name="network_err">Ağa bağlanamadı."</string>
   <string name="network_errorbtntip_custom">Yeniden deneyin</string>
   <string name="network_errorbtntip_login">Oturum aç</string>
