--- a/Turkish/main/CleanMaster.apk/res/values-tr/strings.xml
+++ b/Turkish/main/CleanMaster.apk/res/values-tr/strings.xml
@@ -449,6 +449,8 @@
   <string name="preference_key_garbage_clean_alert">key_garbage_clean_alert</string>
   <string name="preference_key_garbage_cleanup_auto_check_size">key_garbage_cleanup_auto_check_size</string>
   <string name="preference_key_garbage_cleanup_auto_check_time">key_garbage_cleanup_auto_check_time</string>
+  <string name="preference_key_information_setting_close">key_information_setting_close</string>
+  <string name="preference_key_information_setting_wlan">key_information_setting_wlan</string>
   <string name="preference_key_manual_update_cleanup_db">key_manual_update_cleanup_db</string>
   <string name="preference_key_open_optimizer_cloud_scan">key_open_optimizer_cloud_scan</string>
   <string name="preference_key_open_optimizer_memory_scan">key_open_memory_scan</string>
@@ -468,6 +470,18 @@
   <string name="privacy_search_desc">Geçmişi Ara</string>
   <string name="privacy_search_type">Google Araması</string>
   <string name="promotion">Reklam</string>
+  <string name="qq_cache_files">QQ Önbelleği</string>
+  <string name="qq_clean">QQ Temizleyici</string>
+  <string name="qq_clean_exit_confirm_msg">Tarama durdurulup, çıkılsın mı?</string>
+  <string name="qq_data_type_cache">QQ Önbelleği</string>
+  <string name="qq_data_type_cache_desc">"İnternete bağlandıktan sonra bu dosyalar geri yüklenir."</string>
+  <string name="qq_data_type_chat">Sohbet Geçmişi</string>
+  <string name="qq_data_type_chat_desc">"Sohbet geçmişi geri yüklenemedi."</string>
+  <string name="qq_data_type_normal">Çöp</string>
+  <string name="qq_data_type_normal_clean_tips">"Bunlar teknik dosyalardır. Kulllanılan dosyaları silemezsiniz."</string>
+  <string name="qq_data_type_normal_desc">"Kulllanılan dosyaları silemezsiniz."</string>
+  <string name="qq_data_type_other">Diğer</string>
+  <string name="qq_data_type_other_desc">Dikkat edin, buradaki dosyaları sildikten sonra geri kurtaramazsınız.</string>
   <string name="recommend_news">Tavsiyeleri al</string>
   <string name="recommend_the_following">Cihazınızı en iyi hale getirmek için aşağıdaki faaliyetleri de uygulayabilirsiniz.</string>
   <string name="recommended">Seçilmiş</string>
@@ -587,7 +601,8 @@
   <string name="wechat_copying_video_dialog_title">Galeriye aktar</string>
   <string name="wechat_copying_video_empty">Aktarılacak video yok</string>
   <string name="wechat_copying_video_success">Başarıyla aktarıldı</string>
-  <string name="wechat_normal_files">Çöp</string>
+  <string name="wechat_qq_chat_files">Sohbet Geçmişi</string>
+  <string name="wechat_qq_normal_files">Çöp</string>
   <string name="white_list_ad_header">Eski Dosyalar: %d</string>
   <string name="white_list_apk_header">Yükleme Paketleri: %d</string>
   <string name="white_list_cache_header">Önbellek Dosyaları: %d</string>
